Set up icon, fix layout bug

--- a/src/styles/Tooltip.scss
+++ b/src/styles/Tooltip.scss
@@ -1,20 +1,40 @@
 .tooltip-wrapper {
   position: relative;
+
+  .tooltip-icon {
+    width: 30px;
+    height: 30px;
+    background: url($image-path + "question-mark-60px.png") top center/100% no-repeat;
+    position: absolute;
+    top: 7px;
+    right: 0;
+    z-index: 1;
+
+    &:hover,
+    &:active,
+    &:focus {
+      + .tooltip-copy {
+        display: block;
+      }
+    }
+  }
+
   .tooltip-copy {
     display: none;
-    position:absolute;
+    position: absolute;
+    top: -31px;
     right: -10px;
-    top: -30px;
     transform: translateY(50%);
     background: black;
     border-radius: 5px;
-    padding: 10px;
+    padding: 15px;
     width: 175px;
-    // Bleh
+    z-index: 3;
     color: white;
     font-family: "Sailec-Regular", sans-serif;
     font-size: 18px;
     line-height: 29px;
+    text-align: center;
 
     &:after {
       content: "";
@@ -25,13 +45,17 @@
       top: -14px;
       right: 10px;
       margin-left: -15px;
+      z-index: 2;
+
     }
 
     @include breakpoint($screen-md) {
-      top: auto;
+      top: 15px;
+      right: -195px;
+      bottom: auto;
       left: auto;
       right: -195px;
-      bottom: 14px;
+      transform: translateY(-50%);
 
       &:after {
         border: 15px solid transparent;
@@ -41,27 +65,6 @@
         top: calc(50% + 4px);
         right: auto;
         margin-top: -20px;        
-      }
-    }
-  }
-
-  .tooltip-icon {
-    position: absolute;
-    bottom: 65px;
-    right: 0;
-    width: 30px;
-    height: 30px;
-    background: red;
-    text-align: center;
-    z-index: 1;
-    font-size:25px;
-
-    &:hover,
-    // &.test,
-    &:active,
-    &:focus {
-      .tooltip-copy {
-        display: block;
       }
     }
   }
